syntax = "proto3";
import "google/protobuf/empty.proto";

option go_package = "microservice-template/common";

package api;

// --- Order ---
message Order {
  string ID = 1;
  string customerID = 2;
  string Status = 3;
  repeated Item Items = 4;
}

message Orders {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc GetOrders(google.protobuf.Empty) returns (Orders);
}

message Item {
  string ID = 1;
  string Name = 2;
  int32 Quantity = 3;
  string PriceID = 4;
}

message ItemsWithQuantity {
  string ID = 1;
  int32 Quantity = 2;
}

message CreateOrderRequest {
  string customerID = 1;
  repeated ItemsWithQuantity Items = 2;
}

// --- Payment ---

message Payment {
  string ID = 1;
  string Intent = 2;
}

